--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
 .App {
   text-align: center;
+  margin: 20px;
+  border-width: 30%;
+  margin-top: 12%;
+  border: 5px solid rgb(255, 129, 129);
+  border-radius: 30px;
+  padding: 20px;
+  margin-left: 20%;
+  margin-right: 20%;
+  background: linear-gradient(-90deg, #ffffff, #000000);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background: linear-gradient(90deg, #ffffff, #2c2c2c);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+h1{
+  color: #000000;
+  font-size: 50px;
+}
+
+
+button {
+  margin: 10px;
+  padding: 8px 16px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 30px;
+  font-style: oblique;
+  
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  button:hover {
+    /* Hover styles */
+    background-color: #ddd;
+    color: black;
+    box-shadow: #ddd 0px 0px 10px 0px;
+    transform: scale(1.30);
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.feedback-summary {
+  margin-top: 20px;
+}
+
+p{
+  font-size: 20px;
+  font-weight: bold;
+  color: cornsilk;
 }
